added mini language for addressing nodes

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ d3.selectAll('circle').on('click', function(d) {
 })
 
 // demo stuff
+var nodes = ids_to_nodes([[0,0]]);
+nodes = ids_to_nodes([[0,0], [0,1]]);
+
 
 </script>
 </body>
